<resources>
    <string name="app_name">Corporatz</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register as New User</string>
    <string name="String_corporatz">CORPORATZ</string>
    <string name="String_OR">OR</string>
    <string name="FAQ1">Where are we based out of?</string>
    <string name="FaqAnswer1">Hyderabad</string>
    <string name="FAQ2">Who is the founder of Corporatz-The employees app?</string>
    <string name="FaqAnswer2">Girish</string>
    <string name="FAQ3">Is Corporatz a company?</string>
    <string name="FaqAnswer3">No, it is the name of the app. The company is Hitobito Rete Private Limited.</string>
    <string name="FAQ4">Does corporatz accept direct cash for any services?</string>
    <string name="FaqAnswer4">NO, not at all.Only, our paid features require online payment, apart from that,we do not take money from anyone without any reason</string>
    <string name="FAQ5">What if the website is not working or says 404 error?</string>
    <string name="FaqAnswer5">Please contact girishforinfotech@gmail.com and we shall rectify it</string>
    <string name="Corporatz_heading">CORPORATZ</string>
    <string name="Message_coming_soon">Coming Soon...</string>
    <string name="ContactUsField1">Email</string>
    <string name="ContactUsField2">Phone</string>
    <string name="ContactUsFieldAnswer2">9100492856</string>
    <string name="ContactUsFieldAnswer1">support@corporatz.com</string>
    <string name="ContactUsField3">Our Website</string>
    <string name="ContactUsFieldAnswer3">www.corporatz.com</string>
    <string name="ContactUsField4">Instagram</string>
    <string name="ContactUsFieldAnswer4">Corporatz_official</string>
    <string name="ContactUsField5">LinkedIn</string>
    <string name="ContactUsFieldAnswer5">Corporatz</string>
    <string name="ContactUsField6">Facebook</string>
    <string name="ContactUsFieldAnswer6">https://www.facebook.com/corporatz50</string>
    <string name="ContactUsField7">Twitter</string>
    <string name="ContactUsFieldAnswer7">https://twitter.com/CorporatzApp</string>
    <string name="About_us_title">About Us</string>
    <string name="about_us_message">Corporatz is a social healthcare platform for employees who work tirelessly day in and day out. At corporatz we give this unique opportunity to employees to connect and talk to people across the corporate world.</string>
    <string name="RateYourEmployerTitle">Rate your employer</string>
    <string name="PoolCarTitle">Pool your car</string>
    <string name="employee_well_being_corner_title">Employee well being corner</string>
    <string name="working_women_s_corner_title">Working women\'s corner</string>
    <string name="corporate_forum_title">Corporate forum</string>
    <string name="smile_please_title">Smile please</string>
    <string name="feeling_lonely_title">Feeling lonely</string>
    <string name="job_security_title">Job security</string>
    <string name="partner_with_us_title">Partner with us</string>
    <string name="feeling_lonely_alt_title">Health Care 24x7</string>

    <!--Image Picker Strings -->

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
</resources>
